# Mso

./: CMakeLists.txt
libs/: CMakeLists.txt
libs/activeObject/include/: CMakeLists.txt
libs/activeObject/src/: CMakeLists.txt
libs/comUtil/include/: CMakeLists.txt
libs/compilerAdapters/include/: CMakeLists.txt
libs/cppExtensions/include/: CMakeLists.txt
libs/crash/include/: CMakeLists.txt
libs/crash/src/: CMakeLists.txt
libs/debugAssertApi/include/: CMakeLists.txt
libs/debugAssertApi/src/: CMakeLists.txt
libs/dispatchQueue/include/: CMakeLists.txt
libs/dispatchQueue/src/: CMakeLists.txt
libs/errorCode/include/: CMakeLists.txt
libs/errorCode/src/: CMakeLists.txt
libs/eventWaitHandle/: CMakeLists.txt
libs/eventWaitHandle/include/: CMakeLists.txt
libs/eventWaitHandle/src/: CMakeLists.txt
libs/functional/include/: CMakeLists.txt
libs/future/include/: CMakeLists.txt
libs/future/src/: CMakeLists.txt
libs/guid/include/: CMakeLists.txt
libs/guid/include/guid/: msoGuidDetails.h
libs/memoryApi/include/: CMakeLists.txt
libs/memoryApi/src/: CMakeLists.txt
libs/motifCpp/include/: CMakeLists.txt
libs/motifCpp/src/: CMakeLists.txt
libs/oacr/include/: CMakeLists.txt
libs/oacr_posix/include/: CMakeLists.txt
libs/object/include/: CMakeLists.txt
libs/platformAdapters/include/: CMakeLists.txt
libs/platform_posix/include/: CMakeLists.txt
libs/smartPtr/include/: CMakeLists.txt
libs/span/include/: CMakeLists.txt
libs/tagUtils/include/: CMakeLists.txt
libs/typeTraits/include/: CMakeLists.txt
tools/cmake/: liblet.cmake
(+2 files in other folders)
